--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:backgroundTint="@color/colorAccent"
+        android:background="@color/colorAccent"
+        app:backgroundTint="@color/colorAccent"
         app:fabAlignmentMode="end"
         app:fabCradleMargin="5dp"
         app:fabCradleRoundedCornerRadius="15dp"
@@ -51,8 +52,10 @@
         android:id="@+id/fab_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:src="@drawable/ic_local_florist_black_24dp"
-        app:backgroundTint="@color/colorPrimary"
-        app:fabCustomSize="50dp"
-        app:layout_anchor="@id/appbar" />
+        app:backgroundTint="@color/colorAccent"
+        app:fabSize="normal"
+        app:layout_anchor="@id/appbar"
+        tools:ignore="VectorDrawableCompat" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
