--- a/app/src/main/res/layout/content_notification.xml
+++ b/app/src/main/res/layout/content_notification.xml
@@ -16,6 +16,7 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="Notification"
+        android:drawableStart="@drawable/ic_local_florist_black_24dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
 
     <androidx.legacy.widget.Space
