--- a/app/src/main/res/layout/customdialog.xml
+++ b/app/src/main/res/layout/customdialog.xml
@@ -27,7 +27,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/cancel_button"
+            android:id="@+id/button_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
