--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#F47E3A</color>
-    <color name="colorAccent">#F47E3A</color>
-    <color name="colorPrimary">#F47E3A</color>
+    <!-- <color name="colorPrimaryDark">#F47E3A</color>
+     <color name="colorAccent">#F47E3A</color>
+     <color name="colorPrimary">#F47E3A</color>
+ -->
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="primary_light">#B2DFDB</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
 
     <!-- Screens background color-->
     <color name="bg_screen1">#f64c73</color>
