--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_gravity="bottom"
         android:background="@color/colorAccent"
         app:backgroundTint="@color/colorAccent"
-        app:fabAlignmentMode="end"
+        app:fabAlignmentMode="center"
         app:fabCradleMargin="5dp"
         app:fabCradleRoundedCornerRadius="15dp"
         app:fabCradleVerticalOffset="5dp"
