--- a/app/src/main/res/menu/bottom_appbar_menu_primary.xml
+++ b/app/src/main/res/menu/bottom_appbar_menu_primary.xml
@@ -10,19 +10,16 @@
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
-        android:title="Search"
-        app:showAsAction="always" />
+        android:title="Search" />
 
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings"
-         android:title="Settings"
-        app:showAsAction="always" />
+        android:title="Settings" />
     <item
         android:id="@+id/profile"
         android:icon="@drawable/ic_person"
-        android:title="Profile"
-        app:showAsAction="always" />
+        android:title="Profile" />
 
 </menu>
 
