--- a/app/src/main/res/layout/customdialog.xml
+++ b/app/src/main/res/layout/customdialog.xml
@@ -14,14 +14,14 @@
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/TextInputLayout"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-               android:hint="@string/mobile_number"
+                android:hint="@string/mobile_number"
                 android:inputType="number"
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
