--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:paddingTop="@dimen/_5dp"
             android:text="@string/app_name"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -43,7 +43,7 @@
             android:text="@string/android_studio_android_com"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/_16sp"
+            android:textSize="@dimen/_12sp"
             android:textStyle="italic" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
