--- a/app/src/main/res/layout/navigation_menu.xml
+++ b/app/src/main/res/layout/navigation_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_menu"
-        app:menu="@menu/bottom_bar_navigation_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottom_bar_navigation_menu">
 
     </com.google.android.material.navigation.NavigationView>
 
