--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,31 +5,31 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_local_florist_black_24dp"
-            android:title="Import" />
+            android:title="@string/menu" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_local_florist_black_24dp"
-            android:title="Gallery" />
+            android:title="@string/menu" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_local_florist_black_24dp"
-            android:title="Slideshow" />
+            android:title="@string/menu" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_local_florist_black_24dp"
-            android:title="Tools" />
+            android:title="@string/menu" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="@string/menu">
         <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_local_florist_black_24dp"
-                android:title="Share" />
+                android:title="@string/menu" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_local_florist_black_24dp"
-                android:title="Send" />
+                android:title="@string/menu" />
         </menu>
     </item>
 
