--- a/app/src/main/res/menu/bottom_appbar_menu_primary.xml
+++ b/app/src/main/res/menu/bottom_appbar_menu_primary.xml
@@ -5,21 +5,21 @@
     <item
         android:id="@+id/like"
         android:icon="@drawable/ic_favorite_border"
-        android:title="Like"
+        android:title="@string/menu"
         app:showAsAction="always" />
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
-        android:title="Search" />
+        android:title="@string/menu" />
 
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings"
-        android:title="Settings" />
+        android:title="@string/menu" />
     <item
         android:id="@+id/profile"
         android:icon="@drawable/ic_person"
-        android:title="Profile" />
+        android:title="@string/menu" />
 
 </menu>
 
