--- a/app/src/main/res/menu/bottom_bar_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_bar_navigation_menu.xml
@@ -6,7 +6,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/item1"
-            android:title="Item  1" />
+            android:title="@string/menu" />
     </group>
     <group
         android:id="@+id/g2"
@@ -14,7 +14,7 @@
 
         <item
             android:id="@+id/item2"
-            android:title="Item 2" />
+            android:title="@string/menu" />
     </group>
     <group
         android:id="@+id/g3"
@@ -22,7 +22,7 @@
 
         <item
             android:id="@+id/item3"
-            android:title="Item 3" />
+            android:title="@string/menu" />
     </group>
     <group
         android:id="@+id/g4"
@@ -30,6 +30,6 @@
 
         <item
             android:id="@+id/item4"
-            android:title="Item 4" />
+            android:title="@string/menu" />
     </group>
 </menu>
