--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,27 +31,34 @@
     </style>
 
 
-
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
-    <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Dialog">
+    <!--<style name="FullScreenDialogStyle" parent="Theme.AppCompat.Dialog">
         <item name="android:windowNoTitle">true</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorPrimary">@color/colorPrimary</item>
 
-        <!-- Set this to true if you want Full Screen without status bar -->
+        &lt;!&ndash; Set this to true if you want Full Screen without status bar &ndash;&gt;
         <item name="android:windowFullscreen">false</item>
 
         <item name="android:windowIsFloating">false</item>
 
-        <!-- This is important! Don't forget to set window background -->
+        &lt;!&ndash; This is important! Don't forget to set window background &ndash;&gt;
         <item name="android:windowBackground">@color/colorWhite</item>
 
-        <!-- Additionally if you want animations when dialog opening -->
+        &lt;!&ndash; Additionally if you want animations when dialog opening &ndash;&gt;
         <item name="android:windowEnterAnimation">@anim/slide_up</item>
         <item name="android:windowExitAnimation">@anim/slide_down</item>
+    </style>-->
+
+
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
     </style>
+
 </resources>
