--- a/app/src/main/res/layout/data_list.xml
+++ b/app/src/main/res/layout/data_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_5dp"
     android:padding="@dimen/_5dp"
+    android:id="@+id/cardView"
     app:cardCornerRadius="@dimen/_8dp">
 
     <LinearLayout
@@ -24,6 +25,7 @@
             android:id="@+id/text_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5dp"
             android:text="@string/app_name"
             android:textColor="@android:color/background_dark"
             android:textSize="@dimen/_18sp" />
